@startuml Workflow State Machine

' Styling
skinparam StateBackgroundColor #FEFEFE
skinparam StateBorderColor #666666
skinparam ArrowColor #666666
skinparam StateStartColor #445566
skinparam StateEndColor #445566

' Title
title Workflow State Machine

' States
[*] --> Initial : Create Workflow

Initial --> Running : Start Workflow
Running --> Paused : Error Occurred
Running --> Complete : All Nodes Complete
Paused --> Running : Resume Workflow

note right of Initial
  Initial state when workflow
  is first created or reset
end note

note right of Running
  Workflow is actively executing
  agents in sequence
end note

note right of Paused
  Workflow paused due to error
  Allows editing of idle nodes
end note

note right of Complete
  All agents have completed
  their tasks successfully
end note

@enduml
